namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mi-app-production
  labels:
    name: mi-app-production
    environment: production
