service.yml
apiVersion: v1
kind: Service
metadata:
  name: mi-app-service
  namespace: mi-namespace
spec:
  selector:
    app: mi-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
