route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-urgente-route
spec:
  to:
    kind: Service
    name: app-urgente-service
  port:
    targetPort: 80
